scss/_partial.scss
.fullWidth {
        width: 100%;
        margin-left: auto;
        margin-right: auto;
        max-width: initial;
}

#map-canvas img {
	max-width: none;
}

#map-canvas {
	height: 100%;
}

#image-wrapper {
	position: absolute;
	display: none;
	height: 100%;
	top: 0px;
	left: 0px;
}

#description {
	position:absolute;
	top:0px;
    right:0px;
  	padding:40px;
	color:white;
    background-image: none;
    height: 100%;
    background-color:rgba(59, 55, 51, 0.95)
}

#left {
	background-color: none;
    background-image: none;
    position:absolute;
    top:0px;
    left:0px;
}

#close-description {
	position:absolute;
	top:20px;
	right: 35px;
	width: 20px;
	height: 20px;
	cursor: pointer;
	background-image: url('../static/cross.png');
}

#description-content {
	margin-top: 165px;
	background-color: none;
	line-height: 1.4;
}

#description-content p {
	font-family: times;
}

#faux-map {
	position:absolute;
	cursor: pointer;
	display: none;
	bottom: 50px;
	left:50px;
	width: 100px;
	height: 100px;
	background-color: green;
}

#main-logo {
	position: absolute;
	top:0px;
	right: 150px;
	height: 150px;
	width: 100px;
	background-color: orange;
}

#main-menu {
	position:absolute;
	display: none;
	bottom: 100px;
	right: 150px;
	width: 255px;
	height: 50px;
	border:1px solid;
	border-radius: 5px;
	border-color: rgba(212, 213, 209, 1.0000);
	background-color: rgba(236, 235, 231, 1.0000);
}

#main-menu div {
	height: 100%;
}

#main-menu div.a {
	width: 1000px;
}

#more-information {
	cursor: pointer;
}

